--- a/public/stylesheets/data_table.css
+++ b/public/stylesheets/data_table.css
@@ -84,12 +84,6 @@ table.display td.center {
 	margin-bottom: 10px;
 }
 
-.dataTables_info {
-	width: 60%;
-	float: right;
-}
-
-
 .paginate_disabled_previous, .paginate_enabled_previous, .paginate_disabled_next, .paginate_enabled_next {
 	height: 19px;
 	width: 19px;
